<resources>
    <string name="app_name">HOME TECH</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="hint_email">Enter Your Email</string>
    <string name="hint_psd">Enter Your Password</string>
    <string name="login_to_accnt">Login To Your Account</string>
    <string name="login_with_email">Login With Email</string>
    <string name="forget">Forget Password ?</string>
    <string name="hint_mobile">Enter Your 10 digit Indian Mobile Number</string>
    <string name="verify">Verify Your Mobile Number</string>
    <string name="otp_hint">OTP has been send to you on your mobile number please enter it below.</string>
    <string name="name">Enter Your Name</string>
    <string name="save">Save</string>
    <string name="profile_creation">Profile Creation</string>
    <string name="hint_otp">Enter OTP</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="search_hint">Enter Dimensions Of Your Plot </string>
    <string name="search_width">WIDTH</string>
    <string name="search_height">LENGTH</string>
    <string name="wishlist">Wishlist</string>
    <string name="logout">Logout</string>
    <string name="text_dmn_hint">dimension are in sq feet .*</string>
    <string name="budget">Budget Calculator</string>
    <string name="vastu">Vastu Score</string>
    <string name="vastuCal">Calculate Vastu Score</string>
    <string name="vastu_q1">What lies in your North East Corner?</string>
    <string name="vastu_q2">What lies in your South West Corner?</string>
    <string name="vastu_q3">What lies in your South East Corner?</string>
    <string name="vastu_q4">What lies in your North West Corner?</string>
    <string name="vastu_q5">What is the position of main door?</string>
    <string name="vastu_q6">What is the position of underground water tank / boring?</string>
    <string name="vastu_q7">The direction in which house has open space (garden/terrace/porch/balcony)</string>
    <string name="vastu_q8">What is the position of your Kitchen?</string>
    <string name="vastu_q9">What is the position of your Toilet?</string>
    <string name="vastu_q10">What is the shape of your house?</string>
    <string name="vastu_q_1_option_1">Bed Room</string>
    <string name="vastu_q_1_option_2">Drawing Room</string>
    <string name="vastu_q_1_option_3">Kitchen</string>
    <string name="vastu_q_1_option_4">Master Bed Room</string>
    <string name="vastu_q_1_option_5">Puja Room</string>
    <string name="vastu_q_1_option_6">Staircase</string>
    <string name="vastu_q_1_option_7">Toilet</string>
    <string name="dir_north">North</string>
    <string name="dir_south">South</string>
    <string name="dir_east">East</string>
    <string name="dir_west">West</string>
    <string name="dir_north_east">North East</string>
    <string name="dir_south_east">South East</string>
    <string name="dir_south_west">South West</string>
    <string name="dir_north_west">North West</string>
    <string name="regular">Regular (Square/Rectangle)</string>
    <string name="not_regular">Any Other (Irragular)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yourVastuRes">Your Vastu Score is</string>
    <string name="home">Home</string>
    <string name="yourresult">Your Result</string>
    <string name="design">Design Title</string>
    <string name="dimen">Dimensions</string>
    <string name="dimen_val">1000 sq ft</string>
    <string name="plot_size">Plot Size (x*y) </string>
    <string name="plot_size_val">25 X 40</string>
    <string name="calc_budget">Calculate Your Budget</string>
    <string name="dimen_val_enter">Enter Your Plot Dimensions (i.e 1000)</string>
    <string name="furnished">Furnished Structure</string>
    <string name="finished">Finished Structure</string>
    <string name="framed">Framed Structure</string>
    <string name="yourBudget">Your Budget</string>
    <string name="inclusion">It Includes</string>
    <string name="framed_1">Cement OPC-33</string>
    <string name="framed_2">Concrete M-20</string>
    <string name="framed_3">Steel FE-415</string>
    <string name="framed_4">Good Quality Of Bricks</string>
    <string name="formationType">Selected Formation Type</string>
    <string name="budget_string">Total Budget Of Structure</string>
    <string name="finished_1">Plaster - 12mm</string>
    <string name="finished_2">Good Quality Paints</string>
    <string name="finished_3"><![CDATA[Good Quality Wire & cables]]></string>
    <string name="finished_4">Floor Tiles</string>
    <string name="finished_5">Windows : Good Quality Woods</string>
    <string name="finished_6">Good Quality Pipes (water supply) and Taps></string>
    <string name="finished_7">Good Quality windows paints</string>
    <string name="furnished_1">Good Quality Bed</string>
    <string name="furnished_2">Good Quality Furniture</string>
    <string name="furnished_3">Good Quality Almirah / Wood</string>
    <string name="tag_line">You Think We Design</string>
    <string name="title">Enter Plan Title</string>
    <string name="floor">Numnber Of Floor in Plan</string>
    <string name="plot_size_width">Plot Width</string>
    <string name="plot_size_height">Plot Length</string>
    <string name="add">ADD</string>
    <string name="company_about">This app is designed for providing different building plans according to different plot sizes.</string>
    <string name="about">This app is designed for providing different building plans according to different plot sizes. It also includes budget calculator which estimate the total probable cost required for your construction, it also includes Vastu Shastra calculator which tells about your plan or existing structures that is good enough in reference to indian mythology and sunpath. We also assist in your construction works.</string>
    <string name="mobile">+91 8146204445</string>
    <string name="about_us">About</string>
    <string name="email_comp">connect.hometech@gmail.com</string>
    <string name="cotact">Contact Us</string>
    <string name="featured_plan">Featured Plan</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Custom Plan</string>
    <string name="slide_2_desc">different building plans according to different plot sizes.</string>

    <string name="slide_3_title">Vastu Calculator</string>
    <string name="slide_3_desc">This calculator is a instant tool to calculate the suitability of your home. Each room in our home are
        related with the five basic elements of nature - air, water, earth , fire , space.</string>

    <string name="slide_4_title">Budget Calculator</string>
    <string name="slide_4_desc">Calculate cost to build a home on your plot in Delhi NCR in less than 60 seconds. </string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="wishlist_add">Add To Wishlist</string>
    <string name="calc_budget_w">Calculate Budget</string>
    <string name="order">Plan Order </string>
    <string name="requirement">Requirement</string>
    <string name="requirement_up">Send Request</string>
    <string name="orderView">Plan Order View</string>
    <string name="planList">Plan List</string>
    <string name="upload">Upload Plan</string>
    <string name="saif">+91 7888384641</string>
    <string name="saif1">+91 8298461547</string>
    <string name="na">NA</string>
    <string name="remomve">Remove</string>
    <string name="email_co">erpuneetdhawan@gmail.com</string>
</resources>
