<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Vastu_second">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/zero"
        android:clipToPadding="true"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:padding="@dimen/parent_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:src="@drawable/cardinal_ponit_1"/>
            <TextView
                android:text="@string/vastu_q2"
                android:textAppearance="@style/CustomQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RadioGroup
                android:id="@+id/radio_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radio_10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vastu_q_1_option_1"
                    />
                <RadioButton
                    android:id="@+id/radio_20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vastu_q_1_option_2"
                    />
                <RadioButton
                    android:id="@+id/radio_5_Neg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vastu_q_1_option_3"
                    />
                <RadioButton
                    android:id="@+id/radio_0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vastu_q_1_option_4"
                    />
                <RadioButton
                    android:id="@+id/radio_20_puja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vastu_q_1_option_5"
                    />
                <RadioButton
                    android:id="@+id/radio_0_staircase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vastu_q_1_option_6"
                    />
                <RadioButton
                    android:id="@+id/radio_5_neg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/vastu_q_1_option_7"
                    />
                <RadioButton
                    android:id="@+id/radio_5_na"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/na"
                    />
            </RadioGroup>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>