<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About"
    android:orientation="vertical"
    android:padding="@dimen/parent_padding">
    <LinearLayout
        android:layout_marginTop="@dimen/margin_top_view"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_weight="0.75"
            android:src="@drawable/logo_cad"
            android:layout_width="0sp"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="@dimen/dr_padding"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
            android:layout_weight="1.25"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            />
    </LinearLayout>
    <TextView
        android:textAlignment="gravity"
        android:textSize="18sp"
        android:layout_marginTop="@dimen/margin_top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginTop="@dimen/margin_top_view"
            android:textAppearance="@style/CustomQuestion"
            android:text="@string/cotact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/phone"
            android:layout_marginTop="@dimen/dr_padding"
            android:drawablePadding="@dimen/dr_padding"
            android:text="@string/mobile"
            android:drawableStart="@drawable/ic_local_phone_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/phone1"
            android:layout_marginTop="@dimen/dr_padding"
            android:drawablePadding="@dimen/dr_padding"
            android:text="@string/saif"
            android:drawableStart="@drawable/ic_local_phone_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/phone2"
            android:layout_marginTop="@dimen/dr_padding"
            android:drawablePadding="@dimen/dr_padding"
            android:text="@string/saif1"
            android:drawableStart="@drawable/ic_local_phone_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/email"
            android:drawablePadding="@dimen/dr_padding"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_comp"/>
        <TextView
            android:id="@+id/email1"
            android:drawablePadding="@dimen/dr_padding"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_co"/>
    </LinearLayout>


</LinearLayout>