<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="true"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:padding="@dimen/parent_padding"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/email"
            android:drawablePadding="@dimen/dr_padding"
            android:drawableStart="@drawable/ic_email_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_email"/>
        <TextView
            android:id="@+id/mobile"
            android:drawablePadding="@dimen/dr_padding"
            android:drawableStart="@drawable/ic_local_phone_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_mobile"/>
        <TextView
            android:id="@+id/contactMobile"
            android:drawablePadding="@dimen/dr_padding"
            android:drawableStart="@drawable/ic_local_phone_black_24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_mobile"/>
        <TextView
            android:id="@+id/width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_width"/>
        <TextView
            android:id="@+id/height"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_height"/>
        <TextView
            android:id="@+id/requirement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/requirement"/>
    </LinearLayout>
</android.support.v7.widget.CardView>