<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Vastu_seven">

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/zero"
        android:clipToPadding="true"
        app:cardUseCompatPadding="true">
        <LinearLayout
            android:padding="@dimen/parent_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:src="@drawable/cardinal_point"/>
            <TextView
                android:text="@string/vastu_q7"
                android:textAppearance="@style/CustomQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RadioGroup
                android:id="@+id/radio_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radio_north"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dir_north"
                    />
                <RadioButton
                    android:id="@+id/radio_east"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dir_east"
                    />
                <RadioButton
                    android:id="@+id/radio_west"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dir_west"
                    />

                <RadioButton
                    android:id="@+id/radio_south"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/dir_south"
                    />
                <RadioButton
                    android:id="@+id/radio_5_na"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/na"
                    />
            </RadioGroup>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</FrameLayout>