<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clipToPadding="true"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image_layout"
            android:layout_width="match_parent"
            android:layout_height="180sp"
            android:src="@drawable/compass"
            android:scaleType="centerCrop"
            />
        <LinearLayout
            android:padding="@dimen/parent_padding"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:textStyle="bold"
                android:textAppearance="@style/CustomQuestion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/design"
                />
            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAppearance="@style/CustomQuestion"
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/dimen"
                    />
                <TextView
                    android:id="@+id/dimen"
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/dimen_val"
                    />
            </LinearLayout>
            <LinearLayout
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textAppearance="@style/CustomQuestion"
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/plot_size"
                    />
                <TextView
                    android:id="@+id/plotsize"
                    android:layout_width="0sp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/plot_size_val"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
